# tgame

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/common/: input.hpp  system.cpp  system.hpp  window-impl.hpp  window.cpp  window.hpp
src/game/: ai-controller.cpp  ai-controller.hpp  board.cpp  board.hpp  controller.cpp  controller.hpp  game-sm.hpp  game.cpp  game.hpp  pawn.cpp  pawn.hpp  player-controller.cpp  player-controller.hpp  position.hpp
src/render/: render-board.cpp  render-board.hpp  render-impl.hpp  render-pawn.cpp  render-pawn.hpp  render.cpp  render.hpp
